--- a/BabyInABag/BabyInABag.csproj
+++ b/BabyInABag/BabyInABag.csproj
@@ -267,6 +267,14 @@
     <Compile Include="Migrations\201811131820206_orderquantity.Designer.cs">
       <DependentUpon>201811131820206_orderquantity.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201811131824286_orderquantity1.cs" />
+    <Compile Include="Migrations\201811131824286_orderquantity1.Designer.cs">
+      <DependentUpon>201811131824286_orderquantity1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201811131826408_orderquantity2.cs" />
+    <Compile Include="Migrations\201811131826408_orderquantity2.Designer.cs">
+      <DependentUpon>201811131826408_orderquantity2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CartItem.cs" />
@@ -499,6 +507,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201811131820206_orderquantity.resx">
       <DependentUpon>201811131820206_orderquantity.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201811131824286_orderquantity1.resx">
+      <DependentUpon>201811131824286_orderquantity1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201811131826408_orderquantity2.resx">
+      <DependentUpon>201811131826408_orderquantity2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
