--- a/BabyInABag/Web.config
+++ b/BabyInABag/Web.config
@@ -28,10 +28,17 @@
   
   </appSettings>
   <system.web>
-    <authentication mode="None" />
+    <!--<authentication mode="None" />-->
+    <authentication mode="Forms">
+      <forms name="Development" loginUrl="~/Account/Login" cookieless="UseCookies" timeout="120"></forms>
+    </authentication>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
-    <customErrors mode="Off" />
+    <customErrors mode="Off"></customErrors>
+    <!--<customErrors mode="On">
+      <error statusCode="401" redirect="~/Home/Unauthorized" />
+      <error statusCode="404" redirect="~/Home/PageNotFound" />
+    </customErrors>-->
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
