--- a/BabyInABag/BabyInABag.csproj
+++ b/BabyInABag/BabyInABag.csproj
@@ -462,6 +462,7 @@
     <Content Include="Views\DotNetReport\Index.cshtml" />
     <Content Include="Views\DotNetReport\Dashboard.cshtml" />
     <Content Include="Views\Home\FAQ.cshtml" />
+    <Content Include="Views\Orders\CustomerOrders.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
