--- a/BabyInABag/BabyInABag.csproj
+++ b/BabyInABag/BabyInABag.csproj
@@ -279,9 +279,14 @@
     <Compile Include="Migrations\201811201955097_categoeryactive.Designer.cs">
       <DependentUpon>201811201955097_categoeryactive.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201811231636423_coloradded.cs" />
+    <Compile Include="Migrations\201811231636423_coloradded.Designer.cs">
+      <DependentUpon>201811231636423_coloradded.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CartItem.cs" />
+    <Compile Include="Models\Colors.cs" />
     <Compile Include="Models\DotNetReportModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -513,6 +518,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201811201955097_categoeryactive.resx">
       <DependentUpon>201811201955097_categoeryactive.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201811231636423_coloradded.resx">
+      <DependentUpon>201811231636423_coloradded.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
