--- a/BabyInABag/Web.config
+++ b/BabyInABag/Web.config
@@ -28,9 +28,10 @@
   
   </appSettings>
   <system.web>
+    <sessionState timeout="20"></sessionState>
     <!--<authentication mode="None" />-->
     <authentication mode="Forms">
-      <forms name="Development" loginUrl="~/Account/Login" cookieless="UseCookies" timeout="120"></forms>
+      <forms name="Development" loginUrl="~/Account/Login" cookieless="UseCookies" timeout="20"></forms>
     </authentication>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
