-Customer Products no longer appear in the the Manage Products Page. -Created message on Add Product now Centered -Customer Orders Pages now completed and different depending on if a customer has/has no placed an order -Image Link no longer displaying in the Manage Categories Index page

--- a/BabyInABag/BabyInABag.csproj
+++ b/BabyInABag/BabyInABag.csproj
@@ -365,6 +365,8 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="images\openbox.png" />
+    <Content Include="images\unopenbox.png" />
     <Content Include="images\upsidecart.jpg" />
     <Content Include="Scripts\bootbox.js" />
     <Content Include="Scripts\bootbox.min.js" />
