--- a/BabyInABag/BabyInABag.csproj
+++ b/BabyInABag/BabyInABag.csproj
@@ -365,6 +365,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="images\knitting.png" />
     <Content Include="images\openbox.png" />
     <Content Include="images\unopenbox.png" />
     <Content Include="images\upsidecart.jpg" />
