--- a/BabyInABag/Web.config
+++ b/BabyInABag/Web.config
@@ -10,7 +10,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DataBaseModelContainer" connectionString="Server=tcp:dbserver-babyinabag.database.windows.net,1433;Initial Catalog=db-babyinabag;Persist Security Info=False;User ID=hsingh;Password=1qaz!QAZ;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
+    <add name="DataBaseModelContainer" connectionString="Server=tcp:demo-marketplacedbserver.database.windows.net,1433;Initial Catalog=marketplacedb;Persist Security Info=False;User ID=sing4270;Password=1qaz!QAZ;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
